--- a/AAF_Inmobiliaria/AAF_Inmobiliaria.csproj
+++ b/AAF_Inmobiliaria/AAF_Inmobiliaria.csproj
@@ -9,11 +9,20 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
   </ItemGroup>
 
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <None Include="wwwroot\img\backgroundCanito.jpg" />
+    <None Include="wwwroot\img\CanitoLogo.png" />
+    <None Include="wwwroot\img\headerCanito.png" />
   </ItemGroup>
 
 </Project>
