--- a/AAF_Inmobiliaria/appsettings.json
+++ b/AAF_Inmobiliaria/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BDInmobiliaria;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
+		//"MySql": "Server=localhost;DataBase=BDInmobiliaria_2020;Uid=root;Pwd=;"//Coneccion para xampp
+	}
 }
