--- a/AAF_Inmobiliaria/appsettings.json
+++ b/AAF_Inmobiliaria/appsettings.json
@@ -1,13 +1,14 @@
 {
-	"Logging": {
-		"LogLevel": {
-			"Default": "Warning"
-		}
-	},
-	"AllowedHosts": "*",
-	"ConnectionStrings": {
-		"DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BDInmobiliaria;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "Salt": "Super_Secreta_es_la_clave_de_esta_APP_shhh",
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BDInmobiliaria;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
-		//"MySql": "Server=localhost;DataBase=BDInmobiliaria_2020;Uid=root;Pwd=;"//Coneccion para xampp
-	}
+        //"MySql": "Server=localhost;DataBase=BDInmobiliaria_2020;Uid=root;Pwd=;"//Coneccion para xampp
+    }
 }
